# CYK-algorithm

./: CFG.cpp  CFG.h  CMakeLists.txt  CYK.cpp  CYK.h  Production.h  README.md  TableCell.cpp  TableCell.h  main.cpp
cyk/: TableCell.cpp  TableCell.h
